[gd_scene load_steps=6 format=2]

[ext_resource path="res://Sprites/Apple.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Items/Apple.gd" type="Script" id=2]
[ext_resource path="res://Audio/ApplePickup.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AppleSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0.5 ), Vector2( 0, 0 ), Vector2( 0, -0.5 ) ]
}

[node name="Apple" type="Area2D"]
input_pickable = false
collision_layer = 4
script = ExtResource( 2 )

[node name="AppleSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AppleBox" type="CollisionShape2D" parent="."]
modulate = Color( 0.921569, 1, 0, 1 )
shape = SubResource( 1 )

[node name="AppleAnimator" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )

[node name="AppleParticles" type="CPUParticles2D" parent="."]
emission_shape = 1
emission_sphere_radius = 7.65
gravity = Vector2( 0, -20 )
color = Color( 0.232877, 1, 0, 1 )

[node name="PickupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Apple"

[connection signal="body_entered" from="." to="." method="_on_Apple_body_entered"]
